Align h1 text, fix .container padding, fix experience card margin. All fixes for mobile screen width

--- a/styles/NameCard.module.css
+++ b/styles/NameCard.module.css
@@ -31,7 +31,12 @@
     100%{background-position: 0% 50%}
 } 
 
-
+@media screen and (max-width: 400px) {
+  .title {
+    text-align: center;
+  }
+  
+}
 
 /* .title {
     font-size: var(--fs);
